# heycli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
heycli/: __init__.py  main.py
